# baxter_control

./: CMakeLists.txt  README.md  package.xml
lib/: CMakeLists.txt
lib/include/: arm_ctrl.h  baxter_trak_ik.h  robot_interface.h  ros_thread.h  utils.h
lib/include/baxter_interface/: arm_ctrl.h  baxter_trac_ik.h  robot_interface.h  ros_thread.h  utils.h
lib/src/baxter_interface/: arm_ctrl.cpp  baxter_trac_ik.cpp  robot_interface.cpp  ros_thread.cpp  utils.cpp
lib/src/robot_interface/: arm_ctrl.cpp  baxter_trak_ik.cpp  robot_interface.cpp  ros_thread.cpp
msg/: ArmPos.msg  ArmState.msg
src/: move_baxter.cpp
srv/: DoAction.srv
